[project]
name = "channelrans1d"
version = "0.1.0"
description = "Turbulent channel flow RANS in 1D"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]


[tool.ruff.lint]
select = ["B", "C", "D", "E", "F", "FLY", "I", "N", "SIM", "UP", "W"]
ignore = ["D203", "D212"]
