[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "channelrans1d"
version = "0.1.0"
description = "Turbulent channel flow RANS in 1D"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
channelrans1d = ["channelrans1d/data/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]

[tool.ruff.lint]
select = ["B", "C", "D", "E", "F", "FLY", "I", "N", "SIM", "UP", "W"]
ignore = ["D203", "D212"]
